--- a/index.html
+++ b/index.html
@@ -2,14 +2,17 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
+  
+  <link rel="stylesheet" type="text/css" href="css/style.css">
+  
   <link rel="stylesheet" type="text/css" href="css/preset/preset.css">
-  <!-- Put CSS Link here!-->
-  <title>CSS Practice</title>
+  <title>I Wonder What This Does?</title>
 </head>
+
 <body>
 	<div id="title-section">
-    <h1>The Ultimate CSS Walkthrough</h1>
-    <h2>An Introduction to Cascading Style Sheets</h2>
+    <h1 class= "breeSampleClass"> I have to do this so I am doing it.</h1>
+    <h2>Oh yeah I have to do this too...</h2>
   </div>
   <hr>
   <div id="welcome">
